# lfpp-benchmarks

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build-slurm.sh  build-triton.sh  build.rs  slurm-10105729.out
benches/: bench.rs
hexl-bindings/: hexl_wrapper.cpp
src/: cyclotomic_ring.rs  lib.rs  main.rs  ringops.rs
src/hexl/: bindings.rs
